# jr200emulator

./: .gitignore  CMakeLists.txt  README.md
jr200emulator/: CMakeLists.txt  fdc.c  fdc.h  font_jp.h  hsync.pio  joystick.c  jr200emulator.c  jr200keymap.h  jr200rom.h  m6800.c  main.c  rgb.pio  vga16_graphics.c  vsync.pio
prebuild/: jr200emulator.uf2  msxemulator.uf2  msxemulator_opll.uf2  msxemulator_scc.uf2
